K8s/manifests/ingress_resource.yaml
# Ingress resource for the application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: a294354a867e74a6aa7810e20be3b0a5-a01e865a5fcb7770.elb.us-east-1.amazonaws.com
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-web-app
            port:
              number: 80
# mohit-three-tier-eks.local
